--- a/coincheCounter/app/build.gradle
+++ b/coincheCounter/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+
+    // lombok annotations
+    provided "org.projectlombok:lombok:1.12.6"
+    apt "org.projectlombok:lombok:1.12.6"
 }
