--- a/coincheCounter/app/src/main/AndroidManifest.xml
+++ b/coincheCounter/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".exposed.activity.MainActivity_">
+        <activity android:name=".exposed.activity.MainActivity_"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
