--- a/coincheCounter/app/build.gradle
+++ b/coincheCounter/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     // lombok annotations
     provided "org.projectlombok:lombok:1.12.6"
     apt "org.projectlombok:lombok:1.12.6"
+
+    compile "com.j256.ormlite:ormlite-core:4.48"
+    compile "com.j256.ormlite:ormlite-android:4.48"
 }
